--- a/.github/workflows/CI-CD.yml
+++ b/.github/workflows/CI-CD.yml
@@ -1,4 +1,4 @@
-name: CI-CD  
+name: CI-CD
 
 on:
   push:
@@ -50,26 +50,23 @@ jobs:
       - name: Build prod image
         run: docker build -t myapp:final .
 
-
-      - name: Set up SSH
-        uses: webfactory/ssh-agent@v0.5.4 
-        with:
-          ssh-private-key: ${{ secrets.SSH_PRIVATE_KEY }}
-
+      - name: Install sshpass
+        run: sudo apt-get install -y sshpass
 
       - name: Deploy to remote server
         run: |
-          docker save myapp:final | ssh -o StrictHostKeyChecking=no \
-          -p ${{ secrets.PORT }} \
-          ${{ secrets.USER }}@${{ secrets.HOST }} \
-          "podman load && podman tag myapp:final myapp:final"
+          docker save myapp:final | \
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no \
+            -p ${{ secrets.PORT }} \
+            ${{ secrets.USER }}@${{ secrets.HOST }} \
+            "podman load && podman tag myapp:final myapp:final"
 
-          ssh -o StrictHostKeyChecking=no \
-          -p ${{ secrets.PORT }} \
-          ${{ secrets.USER }}@${{ secrets.HOST }} \
-          "podman stop myapp || true && \
-          podman rm myapp || true && \
-          podman run -d --name myapp \
-          --network=host \
-          myapp:final"
+          sshpass -p "${{ secrets.SSH_PASSWORD }}" ssh -o StrictHostKeyChecking=no \
+            -p ${{ secrets.PORT }} \
+            ${{ secrets.USER }}@${{ secrets.HOST }} \
+            "podman stop myapp || true && \
+             podman rm myapp || true && \
+             podman run -d --name myapp \
+             --network=host \
+             myapp:final"
 
